working endpoint with joined data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=demo
+server.port=8083
+server.address=0.0.0.0
 
 spring.datasource.username=sa
 spring.datasource.password=
